Final_work/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ml-service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ml-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ml-service
                port:
                  number: 80
